# qos-extended-mros2-esp32

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  E2_ANALYSIS.md  E2_POSTMORTEM.md  E3_COMPARISON.md  HARNESS_FIXED.txt  HARNESS_FIXES_V2.md  NEXT_STEPS.md  NOTICE  README.md  RECOVERY_COMPLETE.md  RECOVERY_DECISION.md  RECOVERY_PROGRESS.md  REMEDIATION_COMPLETE.md  REMEDIATION_STATUS.md  STATUS.md  TASK_STATUS.md  实验文档已完成.txt
.github/workflows/: ci.yml
components/benchmark_telemetry/: CMakeLists.txt  benchmark_telemetry.cpp
components/mros2-esp32/: CMakeLists.txt
docs/: GITHUB_UPLOAD.md  README.md  REPOSITORY_SCOPE.md
docs/benchmark/: BASELINE_POST_RELIABILITY_FIXES.md  COMMON_ESP32_TELEMETRY_BUILD_AUDIT.md  COMMON_ESP32_TELEMETRY_CONTRACT_DRAFT.md  ENERGY_DEFERMENT_AMENDMENT_20260721.md  EXPERIMENTAL_PROCEDURE.md  EXPERIMENT_DESIGN.md  EXPERIMENT_REMEDIATION_GUIDE.md  H2B_PER_MESSAGE_PREREGISTRATION.md  IMPAIRMENT_EFFICACY_READINESS_AUDIT_20260720.md  MASTER_EXPERIMENT_PLAN.md  MICROROS_COMPARISON_PROTOCOL.md  P4_EXECUTION_RUNBOOK.md  P4_FORMAL_RESULTS.md  P4_INDEPENDENT_WINDOW_PREREGISTRATION.md  P4_PRECOLLECTION_AMENDMENT_20260715.md  P4_SMOKE_GATE_AMENDMENT_20260715.md  PARAMETER_TUNING_EXPERIMENTS.md  PHASE1_PERFORMANCE.md  QOS_MONITOR_TIMING_DEFECT_IMPACT_AUDIT.md  QUICK_START_CHECKLIST.md  README_EXPERIMENTS.md  RECOVERY_CHECKLIST.md  REMEDIATION_ROUND2_EXECUTION.md  REMEDIATION_ROUND3_EXECUTION.md  REMEDIATION_ROUND4_EXECUTION.md  RESOURCE_WORKLOAD_IMPAIRMENT_PROTOCOL_DRAFT.md  ROUND4_CLAIM_EVIDENCE_TABLE.md  ROUND4_EVIDENCE_STATUS.md  ROUND4_TOP_TIER_PROTOCOL.md  ROUND5_AUDIT_VERDICT.md  ROUND6_AUDIT_RATIFICATION.md  ROUND6_FORMAL_RESULTS.md  ROUND6_MECHANISM_PREREGISTRATION.md  RTPS_PARAMETER_EXPERIMENT.md  SEVEN_QOS_FORMAL_EVALUATION_DRAFT.md  SEVEN_QOS_IMPLEMENTATION_READINESS_AUDIT.md  SEVEN_QOS_MECHANISM_PROTOCOL_AMENDMENT_01.md  TELEMETRY_RUNTIME_OVERHEAD_PILOT_AMENDMENT_01.md  TELEMETRY_RUNTIME_OVERHEAD_PILOT_AMENDMENT_02.md  TELEMETRY_RUNTIME_OVERHEAD_PILOT_AMENDMENT_03.md  (+7 more)
docs/experiment/: GATES_STATUS.md  HARNESS_FIXES.md
docs/figures/: README.md
docs/qos/: ENTERPRISE_VALIDATION_MATRIX.md  PAPER_REPLICATION_PLAN.md  QOS_EVIDENCE_MATRIX.md  QOS_IMPLEMENTATION_STATUS.md  QOS_TEST_COVERAGE_ANALYSIS.md
docs/roadmap/: PHASE1.5_EXECUTION_SUMMARY.md  PHASE1.5_QUICKSTART.md  PHASE1.5_TEST_SUITE_SUMMARY.md  PHASE1_DAY1_VERIFICATION.md  PHASE1_DAY2_COMPLETE.md  PHASE1_ENTERPRISE_VALIDATION_REPORT.md  PHASE1_PROGRESS.md  PHASE1_SECURITY_FIXES.md  PROJECT_AUDIT_REPORT.md  RTPS_QOS_ENHANCEMENT.md
docs/transient_local/: TEST_PLAN.md
docs/validation/: QUICK_REFERENCE.md  RUNBOOK.md
microros_bench/: README.md
microros_bench/telemetry_compare/: CMakeLists.txt  sdkconfig.defaults
microros_bench/telemetry_compare/main/: CMakeLists.txt  main.c
mros2/include/: mros2.h
mros2/mros2_header_generator/: templates.tpl
mros2/src/: mros2.cpp
platform/: templates.hpp
platform/rtps/: config.h
platform/wifi/: wifi.c  wifi.h
scripts/: benchmark_reliable_vs_besteffort.sh  echo_best_effort.py  echo_keep_all.py  echo_keep_all_bidirectional.py  echo_qos_mismatch.py  echo_transient_bidirectional.py  echo_transient_local.sh  test_packet_loss.sh  test_transient_local.py
scripts/analysis/: build_group_meeting_package.py  extract_round6_wire_cost.py  run_static_analysis.sh
scripts/automation/: README.md  batch_test.sh  config.json  modify_param.py  param_sweep.sh  run_all_sweeps.sh  run_single_test.sh
scripts/benchmark/: performance_baseline.sh
scripts/experiment/: analyze_h2b_formal.py  analyze_p4_complete.py  analyze_p4_wire.py  analyze_round6_complete.py  analyze_round6_factorial.py  analyze_round6_wire.py  analyze_rtps_timeline.py  analyze_seven_qos_compatibility_campaign.py  analyze_seven_qos_mechanism_campaign.py  analyze_telemetry_runtime_overhead_pilot.py  analyze_three_system_formal.py  audit_current_impairment_matrix_pilots.py  audit_h2b_formal.py  audit_impairment_observability_v2_pilots.py  audit_p4_formal.py  audit_paper_claims.py  audit_qos_monitor_timing_impact.py  audit_round4_result_set.py  audit_round6_formal.py  audit_seven_qos_compatibility_campaign.py  audit_seven_qos_compatibility_family_smoke.py  audit_seven_qos_compatibility_smoke.py  audit_seven_qos_mechanism_campaign.py  audit_telemetry_runtime_overhead_pilot.py  audit_three_system_formal.py  audit_three_system_telemetry_static_overhead.py  audit_workload_protocol_readiness.py  build_h2b_design_assets.py  build_p4_replication_firmware.py  build_round6_variants.py  build_three_system_assets.py  build_three_system_origin_project.py  capture_benchmark_telemetry_smoke.py  capture_wire.sh  compare_esp32_size_json.py  fastdds_udp_mtu_1200.xml  freeze_seven_qos_compatibility_protocol.py  freeze_seven_qos_mechanism_protocol.py  g4_manual_baseline.sh  g4_memory_budget.py  (+84 more)
scripts/figures/: make_figures.py
scripts/optimization/: apply_fixes.sh  quick_fix.sh  run_complete_workflow.sh
scripts/origin/: build_h2b_formal_origin_project.py  (+2 more)
tests/: test_benchmark_telemetry_math.cpp  test_data_fragment_reassembly.cpp  test_fragmentation_capability.cpp  test_lifespan.cpp  test_liveliness_state.cpp  test_qos.cpp  test_qos_compatibility.cpp  test_qos_time.cpp  test_reader_sequence.cpp  test_reliability_state.cpp  test_resource_limits.cpp  test_rtps_messages.cpp  test_simple_history_cache.cpp  verify_day1_fixes.cpp  verify_input_validation.cpp
tools/echo_cpp/: CMakeLists.txt  package.xml
tools/echo_cpp/install/: local_setup.sh  setup.sh
tools/echo_cpp/install/echo_cpp/lib/echo_cpp/: echo_node  echo_node_lossy
tools/echo_cpp/install/echo_cpp/share/echo_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
tools/echo_cpp/install/echo_cpp/share/echo_cpp/cmake/: echo_cppConfig.cmake
tools/echo_cpp/log/: latest_build
tools/echo_cpp/src/: echo_node.cpp  echo_node_lossy.cpp
upstream_bench/: README.md  echo_best_effort.py
workspace/qos_eval/main/: CMakeLists.txt  CMakeLists.txt.backup  app.cpp  app_lossy.cpp
(+72 files in other folders)
