idf_component_register(
  SRCS "main.c"
  INCLUDE_DIRS "."
  PRIV_REQUIRES
    benchmark_telemetry esp_hw_support esp_timer micro_ros_espidf_component)

target_compile_definitions(${COMPONENT_LIB} PRIVATE
  MATCHED_BENCH_PAYLOAD_BYTES=${MATCHED_BENCH_PAYLOAD_BYTES}
  MATCHED_BENCH_PUBLISH_RATE_HZ=${MATCHED_BENCH_PUBLISH_RATE_HZ}
  MATCHED_BENCH_WINDOW_MS=${MATCHED_BENCH_WINDOW_MS}
  MATCHED_BENCH_IMPAIRMENT=${MATCHED_BENCH_IMPAIRMENT})
if(MATCHED_BENCH_RELIABLE)
  target_compile_definitions(${COMPONENT_LIB} PRIVATE
    MATCHED_BENCH_RELIABLE=1)
endif()

if(MATCHED_BENCH_TELEMETRY_ENABLED)
  target_compile_definitions(${COMPONENT_LIB} PRIVATE
    MATCHED_BENCH_TELEMETRY_ENABLED=1)
endif()
